<?xml version="1.0"?>
<package format="3">
  <name>fast_lio</name>
  <version>1.0.0</version>

  <description>
    GPU-accelerated FAST-LIO fork for ROS2 with Ouster support and Jetson Orin optimization.
    Based on LOAM by J. Zhang and S. Singh (RSS 2014).
  </description>

  <maintainer email="omermersin02@gmail.com">Orin</maintainer>

  <license>GPL-2.0-or-later</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>
  <author email="omermersin02@gmail.com">Omer Mersin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
